clusters/cl01tl/manifests/n8n/HTTPRoute-http-route-n8n.yaml
---
# Source: n8n/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: http-route-n8n
    app.kubernetes.io/instance: n8n
    app.kubernetes.io/part-of: n8n
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - n8n.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
        - path:
            type: PathPrefix
            value: /webhook-test/
      backendRefs:
        - group: ''
          kind: Service
          name: n8n-main
          port: 80
          weight: 100
    - matches:
        - path:
            type: PathPrefix
            value: /webhook/
        - path:
            type: PathPrefix
            value: /webhook-waiting/
        - path:
            type: PathPrefix
            value: /form/
      backendRefs:
        - group: ''
          kind: Service
          name: n8n-webhook
          port: 80
          weight: 100
